bug: fix dialog-content height on mobile modal

--- a/src/components/dialog-content/styles.scss
+++ b/src/components/dialog-content/styles.scss
@@ -99,7 +99,6 @@
 
       @include onMobile {
         padding: 16px;
-        height: calc(100% - 236px);
       }
     }
 
@@ -117,6 +116,18 @@
         &:not(:first-child) {
           margin-top: 0;
           margin-left: 16px;
+        }
+      }
+    }
+  }
+}
+
+.milingo-modal--overlay {
+  .dialog-content-wrapper.primary {
+    .dialog {
+      &-content {
+        @include onMobile {
+          height: calc(100% - 236px);
         }
       }
     }
